objects/SLA__c.object
<CustomObject>
    <fields>
        <fullName>Date_SLA_Began__c</fullName>
        <label>Date SLA Began</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_SLA_End__c</fullName>
        <label>Date SLA End</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Pension_Plan_Object__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Pension Plan Object</label>
        <referenceTo>Pension_Loan_Reminder__c</referenceTo>
        <relationshipLabel>SLA</relationshipLabel>
        <relationshipName>SLA</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Pension_Plan__c</fullName>
        <label>Pension Plan</label>
        <referenceTo>Entities__c</referenceTo>
        <relationshipLabel>SLA</relationshipLabel>
        <relationshipName>SLA</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>SLA__c</fullName>
        <label>SLA</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No Service</fullName>
                </value>
                <value>
                    <fullName>Documents Only</fullName>
                </value>
                <value>
                    <fullName>3rd Party Admin</fullName>
                </value>
                <value>
                    <fullName>Comprehensive</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>SLA</label>
    <nameField>
        <displayFormat>{000000000}</displayFormat>
        <label>SLA ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SLA</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>